# RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  agentic_graph.py  app.py  decomposition_graph.py  evaluate.py  index.html  ingest.py  main.py  multi_rep_utils.py  playground.py  pyproject.toml  query_processor.py  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py  agentic_graph.py  app.py  decomposition_graph.py  ingest.py  main.py  query_processor.py
