[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "docx2txt>=0.9",
    "flashrank>=0.2.10",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-experimental>=0.4.2",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langchainhub>=0.1.21",
    "numpy>=2.4.6",
    "pypdf>=6.13.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.13.0",
]
