[project]
name = "rag"
version = "0.1.0"
description = "Production-grade Corrective RAG (CRAG) and Self-RAG hybrid retrieval system with multi-agent LangGraph workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "docx2txt>=0.9",
    "flashrank>=0.2.10",
    "langchain>=1.3.4",
    "faiss-cpu>=1.9.0",
    "langchain-community>=0.4.2",
    "langchain-experimental>=0.4.2",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langchainhub>=0.1.21",
    "numpy>=2.4.6",
    "pypdf>=6.13.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.13.0",
    "scikit-learn>=1.4.0",
    "langchain-cohere>=0.1.0",
    "langgraph>=0.2.0",
    "duckduckgo-search>=6.1.7",
    "langsmith>=0.1.0",
]
